chore: Update index.html for improved SEO and accessibility

--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/png" href="/logo.png" /> -->
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="wFnPl5SJv4LcTDELFcsLYOJPQ7JtBT6cvQAr562-vBo" />
-    <title>Syncode</title>
+    <meta name="description" content="Collaborate instantly with Syncode. A real-time code editor featuring live file sync, AI help, chat, and multi-user cursor visibility. Sleek UI, easy OAuth login.">
+    <title>Syncode - Real-time Collaborative Code Editor</title>
   </head>
   <body>
     <div id="root"></div>
